--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qtquick",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/sketchglass/node-qtquick/issues"
   },
-  "homepage": "https://github.com/sketchglass/node-qtquick#readme"
+  "homepage": "https://github.com/sketchglass/node-qtquick#readme",
+  "dependencies": {
+    "bindings": "^1.2.1",
+    "nan": "^2.5.0"
+  },
+  "gypfile": true
 }
