--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
     "bindings": "^1.2.1",
     "nan": "^2.5.0"
   },
-  "gypfile": true
+  "gypfile": true,
+  "devDependencies": {
+    "mocha": "^3.4.2"
+  }
 }
